--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,29 @@
   <title>Super Galactic Age Calculator</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Super Galactic Age Calculator</h1>
+    <h4> Enter your age to check your age on other planets</h4>
+    <div class= "row">
+      <div class ="col-6">
+        <form id="age-calculator">
+          <label for="age">Age:</label>
+          <input id="age" type="number">
+          <label for="height">Enter your Height: </label>
+          <input id="heigt" type="number">
+          <label for="weight">Enter your weight:</label>
+          <input id="weight" type="number">
+          <label for="food">Enter your food diet:</label>
+          <input id="food" type="text">
+          <label for="drink">Enter your drink frequency in a week:</label>
+          <input id="drink" type="number">
+          <button type="submit" class="btn-primary">Submit</button>
+        </form>
+      </div>  
+      <div class ="col-6">
+
+      </div>
+    </div>
+  </div>
 </body>
 </html>
