--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
       </div>  
       <div class ="col">
         <h4>Present age on different planets</h4>
+        <p>Your Age on Earth:<span id="earthage"></span></p>
         <p>Your Age on Mercury:<span id="mercury"></span></p>
         <p>Your Age on Venus:<span id="venus"></span></p>
         <p>Your Age on Mars:<span id="mars"></span></p>
